# vpn_android

./: .gitignore  readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  crypto.cpp  crypto.hpp  native-lib.cpp
app/src/main/java/com/example/vpn/: MainActivity.kt  MyVpnService.kt  VpnConfig.kt  VpnState.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
